apps/immich/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    helm.sh/resource-policy: keep   # never let Helm delete this object
  name: redirect-https
  namespace: immich
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    helm.sh/resource-policy: keep   # never let Helm delete this object
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
  tls:
    secretName: immich-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    helm.sh/resource-policy: keep   # never let Helm delete this object
  name: immich-http
  namespace: immich
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`immich.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: immich-server
          port: 2283
